--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>demo-1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>	
+	<packaging>war</packaging>	
 	<name>demo-1</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -25,6 +25,10 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+            <groupId>org.springframework.boot</groupId>  
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>		
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
@@ -32,6 +36,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+		  <groupId>org.awaitility</groupId>
+		  <artifactId>awaitility</artifactId>
+		  <scope>test</scope>
+		</dependency>		
 		<!-- 
 	    <dependency>
 	      <groupId>com.google.code.gson</groupId>
@@ -64,8 +73,7 @@
 			</plugin>
 			<plugin>  
 			    <groupId>org.apache.maven.plugins</groupId>  
-			    <artifactId>maven-surefire-plugin</artifactId>  
-			    <version>2.4.2</version>  
+			    <artifactId>maven-surefire-plugin</artifactId>    
 			    <configuration>  
 			    <skipTests>true</skipTests>  
 			    </configuration>  
