--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -25,3 +25,15 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.thymeleaf.mode=HTML5
 #spring.thymeleaf.encoding=UTF-8
 #spring.thymeleaf.content-type=text/html
+
+# REDIS (RedisProperties)
+
+spring.redis.database=0  
+spring.redis.host=127.0.0.1
+spring.redis.port=6379  
+spring.redis.password=  
+spring.redis.jedis.pool.max-active=8  
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.max-idle=8  
+spring.redis.jedis.pool.min-idle=0  
+spring.redis.timeout=300
